wip frontend and backend updated picota-ml packaging
